feat: Remove deprecated http API for getting events for a single interest (#332)
* feat: Remove deprecated http API for getting events for a single interest.
This api has been replaced with an identical one under the 'experimental' url path.

* don't comment out augtool

* fix test

* chore: regen api server

* chore: regen api server with lock file

---------
