# api-server/api/openapi.yaml
@@ -263,79 +263,6 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
           description: Internal server error
       summary: Get events matching the interest stored on the node
-  /events/{sort_key}/{sort_value}:
-    get:
-      deprecated: true
-      parameters:
-      - description: name of the sort_key e.g. 'model'
-        explode: false
-        in: path
-        name: sort_key
-        required: true
-        schema:
-          type: string
-        style: simple
-      - description: value associated with the sort key e.g. model ID
-        explode: false
-        in: path
-        name: sort_value
-        required: true
-        schema:
-          type: string
-        style: simple
-      - description: the controller to filter
-        explode: true
-        in: query
-        name: controller
-        required: false
-        schema:
-          type: string
-        style: form
-      - description: the stream to filter
-        explode: true
-        in: query
-        name: streamId
-        required: false
-        schema:
-          type: string
-        style: form
-      - description: "token that designates the point to resume from, that is find\
-          \ keys added after this point"
-        explode: true
-        in: query
-        name: offset
-        required: false
-        schema:
-          type: integer
-        style: form
-      - description: "the maximum number of events to return, default is 10000."
-        explode: true
-        in: query
-        name: limit
-        required: false
-        schema:
-          type: integer
-        style: form
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/EventsGet'
-          description: success
-        "400":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BadRequestResponse'
-          description: bad request
-        "500":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Internal server error
-      summary: Get events matching the interest stored on the node
   /feed/events:
     get:
       parameters:
